--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,19 +1,19 @@
 name: deploy
- 
+
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
- 
+
 jobs:
   build:
     runs-on: ubuntu-latest
- 
+
     strategy:
       matrix:
-        node-version: ["18.15.0"]
- 
+        node-version: ["16"]  # Specify Node.js version 16 here
+
     services:
       mongodb:
         image: mongo
@@ -23,11 +23,11 @@ jobs:
         image: redis
         ports:
           - 6379:6379
- 
+
     env:
       NODE_ENV: ci
       PORT: 3000
- 
+
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
